# MORIA

./: README.md  pyproject.toml  setup.py
data/00.DATA/: run_convert_C1K1C.src
data/02.CMD/: .smhist  cmd_plot.py
data/05.KECK_TRANS/: IN.HST_Keck_coord_trans_F606W  IN.HST_Keck_coord_trans_F814W  IN.approx_matched_HST_Keck_stars  IN.matched_HST_Keck_stars_F606W  IN.matched_HST_Keck_stars_F814W  Keck_stars.als  MATCHUP.F606W.XYM  MATCHUP.F814W.XYM.02  matched_HST_Keck_stars_F606W.txt  matched_HST_Keck_stars_F814W.txt  outputq_F606W.fits  outputq_F814W.fits  run_HST_Keck_coord_trans_F606W.src  run_HST_Keck_coord_trans_F814W.src  run_matched_HST_Keck_stars_F606W.src  run_matched_HST_Keck_stars_F814W.src
data/07.CALIBRATION/: IN.VI_HST_ogle_man_match4  IN.cal_star_num_2_MATCHUP  IN.fit_HST_Iogle_col_1  IN.fit_HST_Iogle_col_2  IN.psf_star_mags_mcmc_I  IN.psf_star_mags_mcmc_V  calc_cmd_offsets.py  cut_ogle_map.py  plot_calib_cmd.py  run_VI_HST_ogle_man_match4.src  run_cal_star_num_2_MATCHUP.src  run_fit_HST_IV_ogle_col_1.src  run_fit_HST_IV_ogle_col_2.src  run_psf_star_Imags_mcmc.src  run_psf_star_Vmags_mcmc.src  starlist2reg.py
demo/: MORIA_Demo_Old.ipynb  calibrations.ipynb  cmd_diagram.ipynb  creating_psf.ipynb  custom_cmap.py  fitting_psfs.ipynb  in_dev.ipynb  output_stacks.ipynb
demo/.ipynb_checkpoints/: MORIA_Demo_Old-checkpoint.ipynb  cmd_diagram-checkpoint.ipynb  creating_psf-checkpoint.ipynb  fitting_psfs-checkpoint.ipynb  in_dev-checkpoint.ipynb  output_stacks-checkpoint.ipynb
src/: MORIA_Demo.ipynb  Untitled.ipynb  __init__.py  file_list.txt  reduce.py
(+150 files in other folders)
